# idas_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: amcl_config.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_config.yaml  local_costmap_params.yaml  ukf_config.yaml  ukf_mapping_config.yaml  ukf_planning_config.yaml
launch/: gazebo_display.launch  mapping.launch  move_base.launch
maps/: hard_maze.yaml
rviz/: rviz_mapping_config.rviz
scripts/: teleop.py
src/: local_planner.cpp
urdf/: round_object.xacro  snippets.xacro
worlds/: hard_maze.world  maze.world  simple_map.world
